k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app.kubernetes.io/name: settleup-api
  ports:
    - name: http
      port: 80
      targetPort: http
