k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: settleup-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
